# ical-merger

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md
.github/workflows/: docker.yaml  release-please.yaml
src/: config.rs  error.rs  http.rs  lib.rs  main.rs  merger.rs
src/lib/: calendar.rs  config.rs  error.rs  server.rs  timezone.rs
