[package]
name = "ical-merger"
version = "1.0.0"
edition = "2021"

default-run = "http"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
icalendar = "0.16.0"
reqwest = {version = "0.11.23", features = ["rustls-tls"], default_features = false}
tokio = { version = "1.35.1", features = ["full"] }
futures = "0.3"
thiserror = "1.0.56"
envy = "0.4.2"
serde = { version = "1.0.195", features = ["derive"] }
axum = "0.7.3"
cached = { version = "0.47.0", features = ["async"] }
chrono = "0.4.31"
chrono-tz = "0.8.5"

[[bin]]
name = "cli"

[[bin]]
name = "http"
