[package]
name = "ical-merger"
version = "1.3.0"
edition = "2021"

default-run = "http"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
icalendar = "0.17"
reqwest = {version = "0.12", features = ["rustls-tls"], default-features = false}
tokio = { version = "1.47", features = ["full"] }
futures = "0.3"
thiserror = "2.0"
envy = "0.4"
serde = { version = "1.0", features = ["derive"] }
axum = "0.8"
cached = { version = "0.56", features = ["async"] }
chrono = "0.4"
chrono-tz = "0.10"
eyre = "0.6.12"
dotenvy = "0.15.7"
uuid = { version = "1.0", features = ["v4"] }

[[bin]]
name = "cli"

[[bin]]
name = "http"
